# CRawler-

./: .gitignore  .gitmodules  CMakeLists.txt  Downloader.h  Doxyfile  Engine.h  EventManager.h  Generic_Scheduler.h  GrubhubItemPipeline.h  GrubhubSpider.h  IMDBItemPipeline.h  IMDBSpider.h  Item.h  ItemPipeline.h  MockSpider.h  Network.h  Parser.h  README.md  Scheduler.h  Scheduler_Concepts.h  Spider.h  Task.h  Util.h  main.cpp  spider.cpp
CRawlerPlusPlus/: main.cpp
CRawlerPlusPlus.xcodeproj/: project.pbxproj
CRawlerPlusPlus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CRawlerPlusPlus.xcodeproj/xcuserdata/yanlind.xcuserdatad/xcschemes/: CRawlerPlusPlus.xcscheme  xcschememanagement.plist
demo/GrubHub/: GrubhubItemPipeline.h  GrubhubSpider.h
demo/IMDB/: IMDBItemPipeline.h  IMDBSpider.h
demo/Slides/: CRawlerPlusPlus_slide_deck.html
doc/: Tutorial.md  main_page.md
include/CRawlerPlusPlus/: Downloader.h  Engine.h  Generic_Scheduler.h  HTML.h  Item.h  ItemPipeline.h  Json.h  Network.h  Parser.h  Scheduler_Concepts.h  Spider.h  Task.h  Util.h
src/: Downloader.cpp  Generic_Scheduler.cpp  HTML.cpp  Item.cpp  ItemPipeline.cpp  Json.cpp  Network.cpp  Parser.cpp  Spider.cpp  Task.cpp
test/: src.html  test_engine.cpp  test_item.cpp  test_item_pipeline.cpp  test_json.cpp  test_network.cpp  test_parser.cpp  test_scheduler.cpp
